--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:url" content="https://madeinindo.github.io/trending/">
     <meta property="og:type" content="website">
     <link rel="canonical" href="https://madeinindo.github.io/trending/">
+    <meta name="google-site-verification" content="7zlSPy4t-foGxM7FUxsKt-WsYCGVMPYVCF4vrRywYcw" />
     <title>Berita Trending dan Viral Hari Ini di Indonesia</title>
     <style>
         body {
